[package]
name = "nofi"
version = "0.2.0" # bumped by release.sh
description = "A notification daemon for Rofi"
authors = ["Ellis Clayton <ellis@ellis.codes>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ellsclytn/nofi"
repository = "https://github.com/ellsclytn/nofi"
keywords = ["notification", "daemon", "dbus", "notify", "rofi"]
categories = ["command-line-utilities"]
include = ["src/**/*", "dbus/*", "config/*", "build.rs", "Cargo.*", "LICENSE-*", "*.md"]
edition = "2021"
rust-version = "1.64.0"

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
thiserror = "1.0.40"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.5"
colorsys = "0.6.7"
dirs = "5.0.1"
rust-embed = { version = "6.7.0", features = ["compression"] }
tera = "1.19.0"
regex = "1.8.4"
serde_regex = "1.1.0"
serde_json = "1.0.100"
tracing = "=0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rofi = "0.3"
xdg = "^2.1"

[build-dependencies]
dbus-codegen = "0.10.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
